--- a/xwiki-platform-distribution/xwiki-platform-distribution-flavor/xwiki-platform-distribution-flavor-test/xwiki-platform-distribution-flavor-test-misc/config-testing/config.ini
+++ b/xwiki-platform-distribution/xwiki-platform-distribution-flavor/xwiki-platform-distribution-flavor-test/xwiki-platform-distribution-flavor-test-misc/config-testing/config.ini
@@ -1,3 +1,47 @@
+[jdk7]
+category_name = jdk7
+category_test_script = run.py ; %(category_name)s/run.py
+
+[jdk7-alpine]
+category_name = jdk7-alpine
+category_test_script = run.py ; %(category_name)s/run.py
+
+[jdk7-slim]
+category_name = jdk7-slim
+category_test_script = run.py ; %(category_name)s/run.py
+
 [jdk8]
 category_name = jdk8
+category_test_script = run.py ; %(category_name)s/run.py
+
+[jdk8-slim]
+category_name = jdk8-slim
+category_test_script = run.py ; %(category_name)s/run.py
+
+[jdk8-alpine]
+category_name = jdk8-alpine
+category_test_script = run.py ; %(category_name)s/run.py
+
+[jdk8-ibmjava]
+category_name = jdk8-ibmjava
+category_test_script = run.py ; %(category_name)s/run.py
+
+[jdk8-ibmjava-alpine]
+category_name = jdk8-ibmjava-alpine
+category_test_script = run.py ; %(category_name)s/run.py
+
+[jdk9]
+category_name = jdk9
+category_test_script = run.py ; %(category_name)s/run.py
+
+[jdk9-slim]
+category_name = jdk9-slim
+category_test_script = run.py ; %(category_name)s/run.py
+
+[jdk9-ibmjava]
+category_name = jdk9-ibmjava
+category_test_script = run.py ; %(category_name)s/run.py
+
+[jdk9-ibmjava-alpine]
+category_name = jdk9-ibmjava-alpine
 category_test_script = run.py ; %(category_name)s/run.py
