added python installation for some environments

--- a/xwiki-platform-distribution/xwiki-platform-distribution-flavor/xwiki-platform-distribution-flavor-test/xwiki-platform-distribution-flavor-test-misc/config-testing/jdk7-slim/dockerfile/Dockerfile
+++ b/xwiki-platform-distribution/xwiki-platform-distribution-flavor/xwiki-platform-distribution-flavor-test/xwiki-platform-distribution-flavor-test-misc/config-testing/jdk7-slim/dockerfile/Dockerfile
@@ -25,7 +25,9 @@ RUN mkdir workingdir \
 	ca-certificates \
 	openssh-server \
 	ant \
-	ant-optional
+	ant-optional \
+	python2.7 && \
+	ln -s /usr/bin/python2.7 /usr/bin/python
 
 #copy everything
 COPY settings.xml /root/.m2/settings.xml
