--- a/xwiki-platform-distribution/xwiki-platform-distribution-flavor/xwiki-platform-distribution-flavor-test/xwiki-platform-distribution-flavor-test-misc/config-testing/jdk8-ibmjava-alpine/dockerfile/Dockerfile
+++ b/xwiki-platform-distribution/xwiki-platform-distribution-flavor/xwiki-platform-distribution-flavor-test/xwiki-platform-distribution-flavor-test-misc/config-testing/jdk8-ibmjava-alpine/dockerfile/Dockerfile
@@ -24,8 +24,7 @@ RUN mkdir workingdir \
 	sshpass \
 	ca-certificates \
 	openssh-server \
-	ant \
-	ant-optional \
+	apache-ant \
 	python
 
 #copy everything
