--- a/xwiki-platform-distribution/xwiki-platform-distribution-flavor/xwiki-platform-distribution-flavor-test/xwiki-platform-distribution-flavor-test-misc/config-testing/jdk9-ibmjava-alpine/dockerfile/Dockerfile
+++ b/xwiki-platform-distribution/xwiki-platform-distribution-flavor/xwiki-platform-distribution-flavor-test/xwiki-platform-distribution-flavor-test-misc/config-testing/jdk9-ibmjava-alpine/dockerfile/Dockerfile
@@ -23,9 +23,7 @@ RUN mkdir workingdir \
 	&& apk add \
 	sshpass \
 	ca-certificates \
-	openssh-server \
-	ant \
-	ant-optional \
+	apache-ant \
 	python
 
 #copy everything
